crawled_output/stackoverflow_com/questions/79767288/solana-try-from-try-from-unchecked-error/solana-try-from-try-from-unchecked-error.txt
Solana Try-from - Try-from-unchecked error - Stack Overflow
Skip to main content
Stack Overflow
About
Products
For Teams
Stack Overflow for Teams
Where developers & technologists share private knowledge with coworkers
Advertising
Reach devs & technologists worldwide about your product, service or employer brand
Knowledge Solutions
Data licensing offering for businesses to build and improve AI tools and models
Labs
The future of collective knowledge sharing
About the company
Visit the blog
Loading…
current community
Stack Overflow
help
chat
Meta Stack Overflow
your communities
Sign up or log in to customize your list.
more stack exchange communities
company blog
Log in
Sign up
Home
Questions
AI Assist
Labs
Tags
Challenges
Chat
Articles
Users
Jobs
Companies
Collectives
Communities for your favorite technologies.
Explore all Collectives
Teams
Ask questions, find answers and collaborate at work with Stack Overflow for Teams.
Try Teams for free
Explore Teams
Teams
Ask questions, find answers and collaborate at work with Stack Overflow for Teams.
Explore Teams
Collectives™ on Stack Overflow
Find centralized, trusted content and collaborate around the technologies you use most.
Learn more about Collectives
Teams
Q&A for work
Connect and share knowledge within a single location that is structured and easy to search.
Learn more about Teams
Solana Try-from - Try-from-unchecked error
Ask Question
Asked
8 days ago
Modified
8 days ago
Viewed
16 times
0
I am using the solana playground for my code and tried to do a build
Building...
$ error: cannot find macro pubkey in this scope
--> src/lib.rs:8:40
|
8 | pub const RAYDIUM_PROGRAM_ID: Pubkey = pubkey!("675kPX9MHTjS2zt1qfr1NYHuzeLXfQM9H24wFSUt1Mp8");
|
^^^^^^
|
= help: consider importing this macro:
solana_program::pubkey
error[E0425]: cannot find crate try_from_unchecked in the list of imported crates
--> src/lib.rs:14:14
|
14 |
#[derive(Accounts)]
|
^^^^^^^^ not found in the list of imported crates
|
= note: this error originates in the derive macro Accounts
error[E0425]: cannot find crate try_from in the list of imported crates
--> src/lib.rs:14:14
|
14 |
#[derive(Accounts)]
|
^^^^^^^^ not found in the list of imported crates
|
= note: this error originates in the derive macro Accounts
I was hoping to compile it.
compiler-errorssolana
Share
Improve this question
Follow
asked Sep 17 at 11:52
etf6900etf6900
1
Add a comment
|
Related questions
1132
R cannot be resolved - Android error
3
Solana Anchor How to withdraw tokens from program PDA?
0
How to build solana contracts?
Related questions
1132
R cannot be resolved - Android error
3
Solana Anchor How to withdraw tokens from program PDA?
0
How to build solana contracts?
1
BorshDeserialize gives try_from_slice error
13
Solana Anchor Rust: How to convert a public key into an AccountInfo type
2
Solana Anchor how to define custom types with array of structs?
0
How to execute a TS that was designed for solana Playground, locally. To launch on mainnet
14
Solana Test Program Anchor Test failing tsconfig.json" > needs an import assertion of type "json"
1
How to use Anchor provider to fetch accounts from Solana program in ReactJS
Load 6 more related questions
Show fewer related questions
0
Sorted by:
Reset to default
Highest score (default)
Trending (recent votes count more)
Date modified (newest first)
Date created (oldest first)
Know someone who can answer? Share a link to this question via email, Twitter, or Facebook.
Your Answer
Thanks for contributing an answer to Stack Overflow!Please be sure to answer the question. Provide details and share your research!But avoid …Asking for help, clarification, or responding to other answers.Making statements based on opinion; back them up with references or personal experience.To learn more, see our tips on writing great answers.
Draft saved
Draft discarded
Sign up or log in
Sign up using Google
Sign up using Email and Password
Submit
Post as a guest
Name
Email
Required, but never shown
Post as a guest
Name
Email
Required, but never shown
Post Your Answer
Discard
By clicking “Post Your Answer”, you agree to our terms of service and acknowledge you have read our privacy policy.
Start asking to get answers
Find the answer to your question by asking.
Ask question
Explore related questions
compiler-errorssolana
See similar questions with these tags.
The Overflow Blog
Democratizing your data access with AI agents
The history and future of software development (part 1)
Featured on Meta
Spevacus has joined us as a Community Manager
Introducing a new proactive anti-spam measure
New and improved coding challenges
New comment UI experiment graduation
Policy: Generative AI (e.g., ChatGPT) is banned
Hot Network Questions
Short story about a metal-eating alien
Is there a specific term to describe someone who is religious but does not necessarily believe everything that their religion teaches, and uses logic?
Why would disembarking a few passengers delay a flight by 3 hours?
What exactly makes something a "phased-out creature"
What happened to all of the energy created at the Big Bang when the matter and antimatter annihilated each other?
Does clipping distortion affect the information contained within a frequency-modulated signal?
Quantizing EM field by imposing canonical commutation relations
Correct usage of "resolution" associated with "high" and "low"
Convex sets, tangent cones and convergence
Does illusion prevent "you can see" requirement when casting a spell?
What does "my left a** cheek" mean?
Time traveler named Tom/John forgets device, Penelope Weschler, machine harvests Earth's spin
Comparing a combination of data from two columns to another combination from other two columns
Verify a Chinese ID Number
Prove that the sequences of numbers coincide
How Create a math symbol
Are there injections that combine 80 different vaccines?
List of crowdsourced math projects actively seeking participants
What is the Occultist class in 5e?
Does the Arostotelian species-genus concept apply to non-living things?
failed to resolve source metadata for docker.io/library/openjdk:21-slim-buster
Woman from bubble city where all men are infertile meets fertile man from another city
Can the airline or ground staff legally stop passengers from disembarking a plane?
How do trees drop their leaves?
more hot questions
Question feed
Subscribe to RSS
Question feed
To subscribe to this RSS feed, copy and paste this URL into your RSS reader.
Stack Overflow
Questions
Help
Chat
Products
Teams
Advertising
Talent
Company
About
Press
Work Here
Legal
Privacy Policy
Terms of Service
Contact Us
Your Privacy Choices
Cookie Policy
Stack Exchange Network
Technology
Culture & recreation
Life & arts
Science
Professional
Business
API
Data
Blog
Facebook
Twitter
LinkedIn
Instagram
Site design / logo © 2025 Stack Exchange Inc;
user contributions licensed under
CC BY-SA
.
rev 2025.9.25.34480